2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* Makefile.am:

	Tiny cleanups.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* configure.in:

	Explicitly check for pkg-config.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS:

	Update for the upcoming release.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/Makefile.am:

	Ship pixel-fit icon source files by adding them to
	EXTRA_DIST.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: <delete if not using a buddy>

	* data/images/Makefile.am:
	* plugins/Makefile.am:

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/muine-16.svg:
	* data/images/muine-24.svg:
	* data/images/muine-32.svg:

	Added pixel-fit source files for the new renderings
	added in the previous commit.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/muine-16.png:
	* data/images/muine-22.png:
	* data/images/muine-24.png:
	* data/images/muine-32.png:

	New pixel-fit renderings of the new icon for various
	sizes, all contributed by Hylke Bons.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/muine-48.png:
	* data/images/Makefile.am:

	Added new prerendered 48×48 pixel icon from the SVG
	source. This one will be used by newer Nautilus
	versions.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* NEWS:
	
	Initial preparations for the upcoming release.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/images/muine-scalable.svg:

	Updated icon by Hylke Bons. The icon is pretty much the
	same, but has seen a Tango style update.

2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* MAINTAINERS:

	Add myself to MAINTAINERS. Peter Johanson agreed with
	this.

2008-07-04  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* libmuine/pointer-list-model.h:
	* libmuine/rb-cell-renderer-pixbuf.h:

	Use G_TYPE_INSTANCE_GET_CLASS instead of
	G_TYPE_CHECK_GET_CLASS.
