@@ -7,7 +7,7 @@ AM_INIT_AUTOMAKE(muine, 0.8.8)
 
 AM_MAINTAINER_MODE
 
-IT_PROG_INTLTOOL([0.35.0])
+IT_PROG_INTLTOOL([0.40.0])
 
 AC_PROG_CC
 AC_ISC_POSIX
