@@ -1,5 +1,14 @@
 2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>
 
+	* configure.in:
+	* Makefile.am
+
+	 Bumped intltool requirement to 0.40 and no longer ship
+	 files generated by intltool in the tarball. This fixes
+	 "make dist" with newer intltool versions.
+
+2008-07-12  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
 	* Makefile.am:
 
 	Tiny cleanups.
